Closed Bug 253468 Opened 22 years ago Closed 22 years ago

nsIAccessible doesn't need STATE_SIZEABLE and STATE_RESIZABLE

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: pkwarren, Assigned: pkwarren)

Details

Attachments

(1 file)

Currently, in nsIAccessible.idl, we have constants for both SIZE_SIZEABLE and STATE_RESIZABLE. From the MSAA documentation, STATE_SIZEABLE is defined as: "The object can be resized. For example, a user could change the size of a window by clicking the border with a mouse and dragging the mouse." From the ATK documentation, STATE_RESIZABLE is defined as: "Indicates the size of this object is not fixed." These clearly mean the same thing - we should just remove the STATE_RESIZABLE definition and use STATE_SIZEABLE throughout the code.
Assignee: aaronleventhal → pkwarren
Attached patch Patch v1Splinter Review
Removes nsIAccessible::STATE_RESIZABLE.
Status: NEW → ASSIGNED
Attachment #154784 - Flags: review?(aaronleventhal)
Attachment #154784 - Flags: review?(aaronleventhal) → review+
Attachment #154784 - Flags: superreview?(jst)
Comment on attachment 154784 [details] [diff] [review] Patch v1 Good man, revving the UUID. sr=shaver.
Attachment #154784 - Flags: superreview?(jst) → superreview+
Fixed. Checking in public/nsIAccessible.idl; /cvsroot/mozilla/accessible/public/nsIAccessible.idl,v <-- nsIAccessible.idl new revision: 1.28; previous revision: 1.27 done Checking in src/atk/nsAccessibleWrap.cpp; /cvsroot/mozilla/accessible/src/atk/nsAccessibleWrap.cpp,v <-- nsAccessibleWrap.cpp new revision: 1.15; previous revision: 1.14 done Checking in src/atk/nsDocAccessibleWrap.cpp; /cvsroot/mozilla/accessible/src/atk/nsDocAccessibleWrap.cpp,v <-- nsDocAccessibleWrap.cpp new revision: 1.14; previous revision: 1.13 done
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: