Bug 253468 - nsIAccessible doesn't need STATE_SIZEABLE and STATE_RESIZABLE. r=aaronleventhal@moonset.net, sr=shaver@mozilla.org